249

- Fix failure when system properties modified when loading configuration
- Update Jackson to 2.17.1
- Update Jersey to 3.1.7
- Support generic list and set injection into configuration classes
- Update Jetty to 12.0.10
- Update HdrHistogram to 2.2.2
- Allow configuring Jetty's header cache case-sensitiveness

248

- Update Jetty to 12.0.9

247

- Fix failure in DelimitedRequestLogHandler when reporting early
  request exceptions.
- Fail decoding with JsonCodec when content is not single JSON value.
  Previously the codec decoded first JSON value only, ignoring the rest
  of the payload.
- Support Guice providers in HTTP announcement custom properties.
- Allow only `@DefunctConfig` class without `@Config` annotation
- Update airbase to 156
- Update bouncycastle to 1.78.1

246

- Exclude getter-like record methods from JSON serialization

245

- Update bouncycastle to 1.78
- Add SUSPICIOUS_PATH_CHARACTERS to LegacyUriCompliance list

244

- Update jetty to 12.0.8
- Update byte-buddy to 1.14.13
- Update jackson to 2.17.0
- Restore previous recycler pool implementation in Jackson
- Update jaxb-runtime to 4.0.5
- Update HdrHistogram to 2.1.12
- Update log4j-to-slf4j to 2.23.1
- Update bouncycastle to 1.77

243

- Use pipe as separator for openmetrics object names config
- Add support for Jetty legacy URI compliance
- Fix deserializing JSON with large keys
- Update airbase to 153

242
- Update airbase to 151
- Update Jetty to 12.0.7 and EE10
- Add support for using virtual threads in the server
- Update byte-buddy to 1.14.12
- Update jjwt to 0.12.5
- Update logback to 1.5.1

240

- Update airbase to 148
- Update jjwt to 0.12.3
- Update jetty to 11.0.19
- Update byte-buddy to 1.14.10
- Update jersey to 3.1.3
- Update jaxb to 4.0.4
- Update airlift units to 1.10
- Upgrade logback to 1.4.14
- Update jackson to 2.16.1
- Update jersey to 3.1.5

239

- Deprecate attribute utility methods in Tracing
- Allow binding additional span processors
- Update jjwt to 0.12.2

238
