@@ -7,6 +7,7 @@
 - Update Jetty to 12.0.10
 - Update HdrHistogram to 2.2.2
 - Allow configuring Jetty's header cache case-sensitiveness
+- Reject X-Forwarded-* headers if http-server.process-forwarded is false
 
 248
 
